# mozci

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .taskcluster.yml  .travis.yml  Dockerfile  README.md  perfs.py  pyproject.toml  requirements.readthedocs.txt  test.py  tox.ini
.github/: dependabot.yml
docs/: Makefile  conf.py  configuration.rst  index.rst  regressions.rst  usage.rst
docs/api/: errors.rst  index.rst  modules.rst  mozci.data.rst  mozci.data.sources.activedata.rst  mozci.data.sources.hgmo.rst  mozci.data.sources.rst  mozci.data.sources.taskcluster.rst  mozci.data.sources.treeherder.rst  mozci.rst  mozci.util.rst  push.rst  task.rst
mozci/: __init__.py  configuration.py  errors.py  push.py  task.py
mozci/console/: application.py
mozci/console/commands/: batch_execution.py  build_regression.py  build_regressions.py  check_backfills.py  decision.py  push.py  push_build_regression.py  regression.py
mozci/data/: __init__.py  base.py  contract.py
mozci/data/sources/activedata/: __init__.py
mozci/data/sources/activedata/queries/: group_durations.query  push_tasks_from_treeherder.query  push_test_groups_from_unittest.query
mozci/data/sources/artifact/: __init__.py
mozci/data/sources/bugbug/: __init__.py
mozci/data/sources/hgmo/: __init__.py
mozci/data/sources/taskcluster/: __init__.py
mozci/data/sources/treeherder/: __init__.py
mozci/queries/: group_durations.query  group_summary_by_task_id.query  label_artifacts.query  push_results.query  push_revision_count.query  push_revisions.query  push_tasks_from_task.query  push_tasks_from_treeherder.query  push_tasks_from_unittest.query  push_tasks_groups_from_unittest.query  push_tasks_results_from_unittest.query  push_tasks_tags_from_task.query  test_all_groups.query  test_all_result_groups.query  test_task_overhead.query
mozci/util/: bugbug.py  cache_stores.py  classify_batch_execution.py  defs.py  evaluate_batch_execution.py  hgmo.py  logging.py  memoize.py  req.py  taskcluster.py  treeherder.py  yaml.py
tests/: config.toml  conftest.py  test_cache.py  test_cache_stores.py  test_data.py  test_data_sources.py  test_hgmo.py  test_integration.py  test_notify.py  test_push.py  test_regressions.py  test_task.py
tests/files/cache_archives/: cache.tar
tests/integration_queries/: test_all_groups.query  test_all_result_groups.query  test_missing_manifests.query  test_missing_result_manifests.query
