[tool.poetry]
name = "mozci"
version = "2.0.3"
description = ""
authors = [
  "Andrew Halberstadt <ahal@mozilla.com>",
  "Marco Castelluccio <marco@mozilla.com>",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
taskcluster_urls = "~13"
appdirs = "~1"
loguru = "~0"
cachy = "~0"
tomlkit = "~0"
boto3 = {version = "~1", optional = true}
zstandard = {version = "~0", optional = true}
python3-memcached = {version = "~1", optional = true}
redis = {version = "~3", optional = true}
requests = "~2"
flake8 = ">=3,<5"
pyyaml = "~5"
taskcluster = ">=38"
lru-dict = "^1.1.7"

# Optional dependencies
adr = { version = "~0", optional = true }
ValidX = "^0.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15"
pytest = "^6.2"
tox = "^3.24"
responses = "^0.15"
sphinx = "^4.2.0"

[tool.poetry.extras]
adr = ["adr"]
cache = ["boto3", "python3-memcached", "redis", "zstandard"]
cache-s3 = ["boto3"]
cache-memcached = ["python3-memcached"]
cache-redis = ["redis"]
cache-seeded-file = ["zstandard"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
