[tool.poetry]
name = "mozci"
version = "2.2.2"
description = ""
authors = [
  "Andrew Halberstadt <ahal@mozilla.com>",
  "Marco Castelluccio <marco@mozilla.com>",
]

[tool.poetry.scripts]
mozci = 'mozci.console.application:cli'

[tool.poetry.dependencies]
python = ">=3.7,<4"
taskcluster_urls = "~13"
appdirs = "~1"
loguru = "~0"
cachy = "~0"
tomlkit = "~0"
boto3 = {version = "~1", optional = true}
zstandard = {version = "~0"}
python3-memcached = {version = "~1", optional = true}
redis = {version = ">=3,<5", optional = true}
requests = "~2"
flake8 = ">=3,<5"
pyyaml = ">=5,<7"
taskcluster = ">=38"
lru-dict = "^1.1.7"

# Optional dependencies
ValidX = "^0.7"
cleo = ">=0.8.1,<2.1.0"
tabulate = ">=0.8.9,<0.10.0"
arrow = "^1.2.2"
markdown2 = "^2.4.2"
json-e = "^4.4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20"
pytest = "^7.1"
tox = "^3.26"
responses = "^0.20"
sphinx = "^5.3.0"

[tool.poetry.extras]
cache = ["boto3", "python3-memcached", "redis", "zstandard"]
cache-s3 = ["boto3"]
cache-memcached = ["python3-memcached"]
cache-redis = ["redis"]
cache-seeded-file = ["zstandard"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
