[tool.poetry]
name = "mozci"
version = "2.4.9"
description = ""
authors = [
  "Andrew Halberstadt <ahal@mozilla.com>",
  "Marco Castelluccio <marco@mozilla.com>",
]

[tool.poetry.scripts]
mozci = 'mozci.console.application:cli'

[tool.poetry.dependencies]
python = ">=3.10,<4"
taskcluster_urls = "~13"
appdirs = "~1"
loguru = "~0"
cachy = "~0"
tomlkit = "~0"
boto3 = {version = "~1", optional = true}
zstandard = {version = "~0"}
python3-memcached = {version = "~1", optional = true}
redis = {version = ">=3,<8", optional = true}
requests = "~2"
pyyaml = ">=5,<7"
taskcluster = ">=99.2.0"
lru-dict = "^1.4.1"

# Optional dependencies
ValidX = "^0.8"
cleo = "^2.0.1"
tabulate = "^0.10.0"
arrow = "^1.4.0"
markdown2 = "^2.5.5"
json-e = "^4.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^4.5"
pytest = "^9.0"
responses = "^0.20"
sphinx = "^8.1.3"

[tool.poetry.extras]
cache = ["boto3", "python3-memcached", "redis", "zstandard"]
cache-s3 = ["boto3"]
cache-memcached = ["python3-memcached"]
cache-redis = ["redis"]
cache-seeded-file = ["zstandard"]

[build-system]
requires = ["poetry-core==2.3.1"]
build-backend = "poetry.core.masonry.api"
